made better on mbile view for both nav bars and fixes size on jumbo and 3 images for mobile since they were overflowing

--- a/css/main.scss
+++ b/css/main.scss
@@ -268,28 +268,22 @@ nav {
     background-image: url('https://i.postimg.cc/4dSLs5L1/banner.png');
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: -1;
     position: relative;
     width: 100%;
     min-height: 600px;
-    padding-top: 5rem;
 
     &__jumbo {
-        position: relative;
-        min-height: 700px;
-        height: auto;
-        // max-height: 900px;
-        width: 80%;
         flex: 1;
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
         align-items: center;
         justify-content: space-around;
-        margin-left: auto;
-        margin-right: auto;
         padding-bottom: 80px;
         padding-top: 80px;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
 
         &__textBox {
             flex: 1;
@@ -362,7 +356,6 @@ nav {
                     p {
                         font-size: 1.2rem;
                         line-height: 1.5;
-                        // letter-spacing: 1px;
                         text-align: left;
                         padding-left: 20px;
                         font-family: Arial, Helvetica, sans-serif;
@@ -445,11 +438,10 @@ main {
     }
 
     .fitness {
-        width: 75%;
+        width: 85%;
         display: flex;
         flex-wrap: wrap;
-        flex-direction: row;
-        row-gap: 10px;
+        gap: 10px;
         margin-left: auto;
         margin-right: auto;
         padding-bottom: 70px;
@@ -457,24 +449,27 @@ main {
         background-color: $offWhite;
 
         &__card {
-            flex: 1;
+            // flex: 1;
+            max-width: 360px;
             align-self: center;
-            // padding: 0 10px;
+            padding: 5px;
+            margin-left: auto;
+            margin-right: auto;
 
             &__img {
-                align-items: center;
-                display: block;
-                width: 360px;
                 margin-left: auto;
                 margin-right: auto;
+                width: 100%;
+                object-fit: contain;
             }
 
             &__text {
-                padding: 20px 10px;
-                width: 360px;
                 margin-left: auto;
                 margin-right: auto;
                 text-align: center;
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
 
                 &__h3 {
                     font-size: 1.3rem;
@@ -496,7 +491,7 @@ main {
     }
 
     .fanatics {
-        width: 75%;
+        width: 85%;
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
@@ -507,15 +502,11 @@ main {
         padding-top: 50px;
         padding-bottom: 150px;
         background-color: $offWhite;
-
         &__imgBox {
-            flex: 1;
+            // flex: 1;
             align-self: center;
             padding: 0 10px;
-            max-width: 700px;
-            min-width: 400px;
-
-            // flex-basis: 40%;
+            max-width: 600px;
             &__img {
                 align-items: center;
                 display: block;
@@ -524,15 +515,12 @@ main {
                 -webkit-box-shadow: -1px 4px 37px -14px rgba(0, 0, 0, 0.77);
                 -moz-box-shadow: -1px 4px 37px -14px rgba(0, 0, 0, 0.77);
             }
-
         }
-
         &__text {
-            flex: 1;
+            // flex: 1;
             align-self: center;
             padding: 20px 25px;
-            max-width: 600px;
-            min-width: 400px;
+            max-width: 500px;
             text-align: center;
 
             &__h2 {
@@ -655,10 +643,6 @@ main {
 
 
 
-// get all text to center and then if not centered be specific on classes
-
-
-
 
 
 footer {
@@ -729,14 +713,98 @@ footer {
     }
 }
 
-@media only screen and (max-width: 768px) {
 
-    /* For mobile phones: */
-    body {
-        // background-color: yellow;
+/* For tablets: */
+@media only screen and (max-width: 1107px) {
+
+    
+    .landing {
+        &__jumbo__textBox {
+            text-align: center;
+        }
     }
 
 }
 
 /* For desktop: */
-@media only screen and (min-width: 1108px) {}
+@media only screen and (min-width: 1108px) {
+    
+}
+
+/* For mobile: */
+@media only screen and (max-width: 649px) {
+    
+
+    nav {
+        padding-top: 20px;
+        padding-bottom: 20px;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
+            height: 7rem;
+            width: 100%;
+            background-color: $offWhite;
+            padding: 5px 0;
+
+        .logo {
+            flex: 1;
+
+            &__icon {
+                width: 150px;
+            }
+        }
+    
+        .navLinks {
+            flex: 1;
+            display: inline-flex;
+            flex-direction: row;
+            gap: 10px;
+            justify-content: space-around;
+            align-items: center;
+            // padding: 10px 10px;
+            &__li {
+                a {
+                    font-size: 1rem;
+                    color: $lightGrey;
+                    text-decoration: none;
+                }
+            }
+        }
+    
+        .build {
+            flex: 1;
+    
+            &__btn {
+                font-size: .9rem;
+                width: 7.5rem;
+            }
+        }
+    }
+    
+    footer {
+        background-color: $offBlack;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        height: 5rem;
+        position: relative;
+        bottom: 0px;
+    
+        nav {
+            position: absolute;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
+            height: 5rem;
+            width: 100%;
+            background-color: $offWhite;
+            padding: 5px 0;
+    
+            
+    
+    
+        }
+    }
+}
